# moveit_analysis

./: CMakeLists.txt  README.md  package.xml
moveit_analysis/: __init__.py  chain.py  convert.py  stateful.py  stateless.py  util.py  visualization.py  workspace.py
nodes/: scene_monitor.py
scripts/: cm.py  view_metrics.py
